# Split-and-Merge-cpp

./: CMakeLists.txt  README.md  main.cpp
include/SaMlib/: CornerSearch.h  dataReader.h  structs.h  visualizing.h
include/matplotlib/: matplotlibcpp.h
src/: CornerSearch.cpp  dataReader.cpp  visualizing.cpp
test/: testDataReader.cpp  test_data.txt
